tests/extensions/classes/valid/classDeclaration.wacc
begin
    class sa is
        int s   # 4
        char b  # 1
        bool c  # 1
    end
end


