tests/extensions/classes/semanticErr/sameClassStruct.wacc
begin
    class sa is
        int a
    end

    struct sa is
        int a
    end
end